# Smart-contract

./: .gitignore  Anchor.toml  Cargo.toml  generate-idls.sh  jest.config.js  package.json
programs/veralux/: Cargo.toml
programs/veralux/src/: constraints.rs  errors.rs  events.rs  lib.rs  utils.rs
programs/veralux/src/global/: confirm_pause.rs  confirm_resume.rs  init_global.rs  init_pause.rs  init_resume.rs  mod.rs  state_global.rs  update_global.rs
programs/veralux/src/governance/: execute_proposal.rs  mod.rs  state_governance.rs  submit_proposal.rs  transfer.rs
programs/veralux/src/lp_staking/: claim_lp_rewards.rs  init_lp_staking.rs  mod.rs  stake_lp.rs  state_lp_staking.rs  unstake_lp.rs  update_lp_staking.rs
programs/veralux/src/multisig/: confirm_multisig.rs  init_multisig.rs  mod.rs  state_multisig.rs  update_multisig.rs
programs/veralux/src/presale/: buy_presale.rs  claim_presale.rs  init_presale.rs  mod.rs  state_presale.rs  update_presale.rs
programs/veralux/src/staking/: claim_rewards.rs  init_staking.rs  mod.rs  stake.rs  state_staking.rs  unstake.rs  update_staking.rs
sdk/common/: helper.ts  index.ts  transaction.ts
sdk/idl/: veralux.json  veralux.ts
tests/global/: add-whitelist.test.ts  init-global.test.ts  start-presale.test.ts  update-global.test.ts  update-launch-time.test.ts
tests/governance/: submit-proposal.test.ts
tests/lpStaking/: init-lp-staking.test.ts  update-lp-staking.test.ts
tests/multisig/: confirm-multisig.test.ts  init-multisig.test.ts  update-multisig.test.ts
tests/presale/: buy-presale.test.ts  (+3 more)
tools/: types.ts
